컬렉션 접근 방식을 `get(0)`에서 `getFirst()`로 변경 및 사용하지 않는 import 제거