@@ -1,5 +1,15 @@
 package org.jh.batchbridge.service;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import org.jh.batchbridge.domain.Chunk;
 import org.jh.batchbridge.domain.Job;
 import org.jh.batchbridge.domain.Result;
@@ -19,19 +29,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.mock.web.MockMultipartFile;
-
-import java.util.List;
-import java.util.Map;
-
-import java.util.Optional;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class BatchJobServiceTest {
@@ -291,7 +288,7 @@ class BatchJobServiceTest {
 
         // then
         assertThat(mergedResults).hasSize(1);
-        MergedResultDto dto = mergedResults.get(0);
+        MergedResultDto dto = mergedResults.getFirst();
         assertThat(dto.getRowId()).isEqualTo("100");
         assertThat(dto.getCustomId()).isEqualTo("row-1");
         assertThat(dto.getPrompt()).isEqualTo("test prompt");
@@ -304,7 +301,7 @@ class BatchJobServiceTest {
 
     @Test
     @DisplayName("실패한 행만 CSV로 내보내면 FAIL 상태인 데이터만 포함된다")
-    void exportFailedRowsToCsvSuccess() throws Exception {
+    void exportFailedRowsToCsvSuccess() {
         // given
         Long jobId = 1L;
         Job job = Job.builder().id(jobId).name("test-job").build();
